Add sign up test

--- a/framework/src/test/resources/dev.properties
+++ b/framework/src/test/resources/dev.properties
@@ -3,3 +3,5 @@ testdata.user.password=12563478
 testdata.user.wrongFormatEmail=lizerd34
 testdata.user.wrongEmail=kek@mail.ru
 testdata.user.wrongPassword=kek
+
+testdata.registrationData.email=lizerd34@mail.ru
